# OpenAI-Agents-SDK-Projects

acedemic_research_agent/: README.md  env.example  pyproject.toml
acedemic_research_agent/src/acedemic_research_agent/: __init__.py  main.py  multi_agent.py
acedemic_research_agent/src/acedemic_research_agent/agent_tools/: search_tool.py
acedemic_research_agent/src/acedemic_research_agent/models/: acedemic_models.py
acedemic_research_agent/src/acedemic_research_agent/prompts/: acedemic_prompts.py
airline_customer_service_agent/: README.md  pyproject.toml
airline_customer_service_agent/src/airline_customer_service_agent/: __init__.py  main.py  multi_agents.py
airline_customer_service_agent/src/airline_customer_service_agent/agent_tools/: faq_tool.py  search_tool.py  update_seat_tool.py
airline_customer_service_agent/src/airline_customer_service_agent/models/: airline_models.py
airline_customer_service_agent/src/airline_customer_service_agent/prompts/: airline_prompts.py
ecommerce-support-agent/: README.md  env.example  pyproject.toml
ecommerce-support-agent/src/ecommerce_support_agent/: __init__.py  main.py  multi_agents.py
ecommerce-support-agent/src/ecommerce_support_agent/agent_tools/: order_tracker_tool.py  product_lookup_tool.py  return_process_tool.py
ecommerce-support-agent/src/ecommerce_support_agent/models/: ecommerce_models.py
ecommerce-support-agent/src/ecommerce_support_agent/prompts/: ecommerce_prompts.py
environment-monitoring-agent/: README.md  pyproject.toml
environment-monitoring-agent/src/environment_monitoring_agent/: __init__.py  main.py  multi_agents.py
environment-monitoring-agent/src/environment_monitoring_agent/agent_tools/: search_tool.py
environment-monitoring-agent/src/environment_monitoring_agent/helper_functions/: printer.py
environment-monitoring-agent/src/environment_monitoring_agent/prompts/: agent_prompts.py
financial_research_agent/: README.md  pyproject.toml
financial_research_agent/src/financial_research_agent/: __init__.py  main.py  multi_agents.py
financial_research_agent/src/financial_research_agent/agent_tools/: search_tool.py
financial_research_agent/src/financial_research_agent/helper_functions/: utils.py
financial_research_agent/src/financial_research_agent/models/: financial_models.py
financial_research_agent/src/financial_research_agent/prompts/: financial_prompts.py
fitness_agent/: README.md  pyproject.toml
fitness_agent/src/fitness_agent/: __init__.py  agents_flow.py  main.py
multi_agent_content_creation_workflow/: README.md  pyproject.toml
multi_agent_content_creation_workflow/src/multi_agent_content_creation_workflow/: __init__.py  main.py  multi_agents.py
multi_agent_content_creation_workflow/src/multi_agent_content_creation_workflow/agent_tools/: tools.py
multi_agent_content_creation_workflow/src/multi_agent_content_creation_workflow/data/: content_topics.py
multi_agent_content_creation_workflow/src/multi_agent_content_creation_workflow/models/: content.py
multi_agent_content_creation_workflow/src/multi_agent_content_creation_workflow/prompts/: content_prompts.py
travel_agent/: README.md  pyproject.toml
travel_agent/src/travel_agent/: agents_flow.py  main.py
weather-assistant/: pyproject.toml
weather-assistant/src/weather_assistant/: __init__.py  client.py  server.py
