[project]
name = "environment-monitoring-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Aneeque", email = "aneeq.khatri@celeritasdigital.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.14",
    "rich>=14.0.0",
    "streamlit>=1.45.0",
]

[project.scripts]
environment-monitoring-agent = "environment_monitoring_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
