[project]
name = "fitness-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Aneeque", email = "aneeq.khatri@celeritasdigital.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.11",
    "python-dotenv>=1.1.0",
]

[project.scripts]
fitness-agent = "fitness_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
